--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/gemlogo1"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -43,13 +43,14 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"/>
         <activity
-            android:name=".GroupActivity"
-            android:label="@string/title_activity_group"/>
             android:name=".SettingsDrawerActivities.GroupActivity"
             android:label="@string/title_activity_group" />
         <activity
             android:name=".SettingsDrawerActivities.ResourceActivity"
             android:label="@string/title_activity_myresource" />
+        <activity
+            android:name=".SettingsDrawerActivities.CraftingActivity"
+            android:label="@string/title_activity_crafting" />
         <activity
             android:name=".MainActivity"
             android:noHistory="true"
