--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.20.0'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.github.paolorotolo:appintro:4.1.0'
     testCompile 'junit:junit:4.12'
 }
