--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
+        <service android:name=".PulseService"/>
+
         <!-- Facebook Integration -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
